--- a/dpireport.html
+++ b/dpireport.html
@@ -3,15 +3,14 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Commodity Price — Live Report (CSV debug)</title>
+<title>Commodity Price — Live Report</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600,700&display=swap" rel="stylesheet">
 <style>
-  body{font-family:Inter,system-ui,Segoe UI,Roboto,Arial; background:#f7faf7; margin:20px;}
+  body{font-family:Inter,system-ui,Segoe UI,Roboto,Arial;background:#f7faf7;margin:20px;}
   .container{max-width:980px;margin:0 auto;background:white;padding:18px;border-radius:8px;box-shadow:0 8px 24px rgba(2,6,23,0.06)}
-  header{display:flex;justify-content:space-between;gap:12px;align-items:center;flex-wrap:wrap}
-  select,input,button{padding:8px 10px;border-radius:6px;border:1px solid #d1d5db}
-  .download{background:#0b6b3a;color:white;border:none;cursor:pointer}
-  .load-btn{background:#2563eb;color:white;border:none;cursor:pointer}
+  header{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
+  select,button{padding:8px 10px;border-radius:6px;border:1px solid #d1d5db}
+  button{background:#0b6b3a;color:white;border:none;cursor:pointer}
   table{width:100%;border-collapse:collapse;margin-top:14px}
   th,td{padding:8px;border-bottom:1px solid #eef2e8;text-align:left}
   .notes{margin-top:12px;font-size:13px;color:#475569}
@@ -23,14 +22,14 @@
     <header>
       <div>
         <h3 style="margin:0 0 6px 0">Commodity Price — Live (Google Sheet CSV)</h3>
-        <div id="meta" style="color:#64748b;font-size:13px">Make sure sheet is published to the web as CSV.</div>
+        <div id="meta" style="color:#64748b;font-size:13px">Make sure sheet is published as CSV.</div>
       </div>
 
       <div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap">
         <label style="font-size:13px;color:#64748b">Select date</label>
         <select id="dateSelect"></select>
-        <button id="loadBtn" class="load-btn">Load</button>
-        <button id="downloadPdf" class="download">Download PDF</button>
+        <button id="loadBtn">Load</button>
+        <button id="downloadPdf">Download PDF</button>
       </div>
     </header>
 
@@ -41,7 +40,7 @@
       </table>
     </div>
 
-    <div class="notes" id="notes">Status: waiting to fetch sheet… (open DevTools → Console/Network for raw output)</div>
+    <div class="notes" id="notes">Status: waiting to fetch sheet…</div>
   </div>
 
 <script>
@@ -53,7 +52,7 @@ function showNote(msg, isError=false){
   console.log(msg);
 }
 
-// load PapaParse for CSV parsing
+// Load PapaParse
 const papa = document.createElement('script');
 papa.src = 'https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js';
 papa.onload = init;
@@ -67,18 +66,14 @@ function init(){
 }
 
 async function fetchAndParse(){
-  try{
-    const res = await fetch(SHEET_CSV, {cache: "no-store"});
-    console.log('Fetch response:', res.status, res.statusText);
+  try {
+    const res = await fetch(SHEET_CSV, { cache: "no-store" });
     const txt = await res.text();
-    if(!txt || txt.trim().length === 0){
-      showNote('Empty CSV. Make sure sheet is published as CSV.', true);
-      return;
-    }
+    if(!txt.trim()) return showNote('Empty CSV, make sure it’s published.', true);
 
-    const parsed = Papa.parse(txt, {skipEmptyLines:false});
+    const parsed = Papa.parse(txt, { skipEmptyLines:false });
     rows = parsed.data;
-    headerRow = rows[9] || []; // row 10 in sheet
+    headerRow = rows[9] || []; // Row 10 = header
     identifyDateColumns();
   } catch (err) {
     console.error(err);
@@ -86,49 +81,30 @@ async function fetchAndParse(){
   }
 }
 
-/* ✅ Improved parser: handles “January 4, 2025”, ISO, Excel serials, etc. */
+// Parse "January 4, 2025" → ISO
 function parseDateISO(text){
   if(!text) return null;
   const t = String(text).trim();
-
-  // Try native parsing first
-  let d = new Date(t);
-  if(!isNaN(d)) return d.toISOString().slice(0,10);
-
-  // Try "January 4, 2025" style
   const m = t.match(/^([A-Za-z]+)\s+(\d{1,2}),\s*(\d{4})$/);
   if(m){
-    const monthNames = ["January","February","March","April","May","June","July","August","September","October","November","December"];
-    const monthIndex = monthNames.indexOf(m[1]);
-    if(monthIndex >= 0){
-      const dt = new Date(Date.UTC(m[3], monthIndex, m[2]));
-      return dt.toISOString().slice(0,10);
-    }
+    const months = ["January","February","March","April","May","June","July","August","September","October","November","December"];
+    const idx = months.indexOf(m[1]);
+    if(idx >= 0) return new Date(Date.UTC(m[3], idx, m[2])).toISOString().slice(0,10);
   }
-
-  // Try Excel serial number fallback
-  const n = Number(t);
-  if(!isNaN(n) && n > 1000){
-    const excelEpoch = new Date(Date.UTC(1899,11,30));
-    const ms = n * 24*3600*1000;
-    const dt = new Date(excelEpoch.getTime() + ms);
-    return dt.toISOString().slice(0,10);
-  }
-
-  return null;
+  const d = new Date(t);
+  return isNaN(d) ? null : d.toISOString().slice(0,10);
 }
 
+// Identify all date columns (starting at D)
 function identifyDateColumns(){
   dateColumns = [];
-  for(let i=0; i<headerRow.length; i++){
+  for(let i=3; i<headerRow.length; i++){ // start at D (index 3)
     const iso = parseDateISO(headerRow[i]);
-    if(iso){
-      dateColumns.push({index:i, raw:headerRow[i], iso});
-    }
+    if(iso) dateColumns.push({index:i, raw:headerRow[i], iso});
   }
 
   if(dateColumns.length === 0){
-    showNote('No date-like headers found in row 10. Check your sheet.', true);
+    showNote('⚠️ No valid date columns found. Check sheet headers.', true);
     return;
   }
 
@@ -138,12 +114,9 @@ function identifyDateColumns(){
     return `<option value="${dc.index}">${label}</option>`;
   }).join('');
 
-  // ✅ Default to latest date
-  const latestIndex = dateColumns[dateColumns.length - 1].index;
-  sel.value = latestIndex;
-  showNote(`✅ Loaded ${dateColumns.length} date columns. Select a date and click "Load".`);
+  sel.value = dateColumns[dateColumns.length - 1].index;
+  showNote(`✅ Found ${dateColumns.length} date columns. Defaulting to latest.`);
 
-  // Add listeners
   document.getElementById('loadBtn').addEventListener('click', () => renderByColumn(Number(sel.value)));
 
   // PDF download
@@ -161,40 +134,33 @@ function identifyDateColumns(){
 }
 
 function renderByColumn(colIndex){
-  if(!rows || rows.length === 0) return showNote('No data to render.');
-  if(typeof colIndex !== 'number' || isNaN(colIndex)) return showNote('Invalid date selection.', true);
-
   const tbody = document.querySelector('#priceTable tbody');
   tbody.innerHTML = '';
   let rendered = 0;
 
-  for(let r=10; r<rows.length; r++){
+  for(let r=10; r<rows.length; r++){ // Data starts row 11
     const row = rows[r];
-    if(!row || row.length === 0) continue;
+    if(!row || row.length < colIndex) continue;
+
     const commodity = row[0] || '';
     const spec = row[1] || '';
     const unit = row[2] || '';
-    const rawPrice = row[colIndex];
-    let price = null;
+    const price = row[colIndex] || '';
 
-    if(rawPrice && String(rawPrice).trim() !== ''){
-      const cleaned = String(rawPrice).replace(/,/g,'').replace(/[^\d\.\-]/g,'').trim();
-      const p = parseFloat(cleaned);
-      if(!isNaN(p)) price = p;
+    if(commodity.trim()){
+      tbody.insertAdjacentHTML('beforeend', `
+        <tr>
+          <td>${commodity}</td>
+          <td>${spec}</td>
+          <td>${unit}</td>
+          <td>${price}</td>
+        </tr>
+      `);
+      rendered++;
     }
-
-    tbody.insertAdjacentHTML('beforeend', `
-      <tr>
-        <td>${commodity || '—'}</td>
-        <td>${spec || '—'}</td>
-        <td>${unit || '—'}</td>
-        <td>${price !== null ? price.toFixed(2) : '—'}</td>
-      </tr>
-    `);
-    rendered++;
   }
 
-  showNote(`✅ Showing prices for: ${headerRow[colIndex]} — ${rendered} rows.`);
+  showNote(`✅ Showing ${rendered} items for: ${headerRow[colIndex]}`);
 }
 </script>
 </body>
