--- a/dpireport.html
+++ b/dpireport.html
@@ -68,9 +68,8 @@
 
 <body>
   <div class="controls">
-    <h3 style="margin:0 0 8px 0">Commodity Price — Live (Google Sheet CSV)</h3>
+    <h3 style="margin:0 0 8px 0">Agri-Fishery Commodity Retail Price</h3>
     <div style="font-size:13px;color:#666;margin-bottom:6px;">
-      Make sure sheet is published as CSV.
     </div>
     <label style="font-size:13px;margin-right:6px;">Select Date:</label>
     <select id="dateSelect"></select>
@@ -96,7 +95,7 @@
       </div>
     </div>
 
-    <div class="price-monitoring">Price Monitoring Report</div>
+    <div class="price-monitoring">DAILY PRICE INDEX REPORT</div>
 
     <div class="table-container">
       <table id="priceTable">
@@ -217,3 +216,4 @@ function downloadPDF(){
 </script>
 </body>
 </html>
+
