--- a/dpireport.html
+++ b/dpireport.html
@@ -43,6 +43,9 @@
   .price-monitoring {
     text-align:center; background:var(--light-yellow);
     padding:8px; font-size:20px; font-weight:bold; margin-bottom:12px;
+   .daily-price {
+    text-align:center; background:var(--light-yellow);
+    padding:8px; font-size:20px; font-weight:bold; margin-bottom:12px; 
   }
 
   /* Table design */
@@ -95,7 +98,8 @@
       </div>
     </div>
 
-    <div class="price-monitoring">REGION IX</div></div> DAILY PRICE INDEX REPORT</div>
+    <div class="price-monitoring">REGION IX</div>
+    <div class="daily-price"> DAILY PRICE INDEX REPORT</div>
 
     <div class="table-container">
       <table id="priceTable">
@@ -216,5 +220,6 @@ function downloadPDF(){
 </script>
 </body>
 </html>
+
 
 
