--- a/dpireport.html
+++ b/dpireport.html
@@ -43,9 +43,6 @@
   .price-monitoring {
     text-align:center; background:var(--light-yellow);
     padding:8px; font-size:20px; font-weight:bold; margin-bottom:12px;
-   .daily-price {
-    text-align:center; background:var(--light-yellow);
-    padding:8px; font-size:20px; font-weight:bold; margin-bottom:12px; 
   }
 
   /* Table design */
@@ -98,8 +95,7 @@
       </div>
     </div>
 
-    <div class="price-monitoring">REGION IX</div>
-    <div class="daily-price"> DAILY PRICE INDEX REPORT</div>
+    <div class="price-monitoring">REGION IX DAILY PRICE INDEX REPORT</div>
 
     <div class="table-container">
       <table id="priceTable">
@@ -220,6 +216,7 @@ function downloadPDF(){
 </script>
 </body>
 </html>
+
 
 
 
