--- a/dpireport.html
+++ b/dpireport.html
@@ -40,9 +40,16 @@
   .agency-text{font-size:14px;line-height:1.4}
   .agency-text strong{font-size:15px;display:block;color:var(--da-green)}
 
+  /* Report title */
   .price-monitoring {
     text-align:center; background:var(--light-yellow);
-    padding:8px; font-size:20px; font-weight:bold; margin-bottom:12px;
+    padding:8px; margin-bottom:12px;
+  }
+  .report-title {
+    font-size:20px; font-weight:bold; display:block;
+  }
+  .report-subtitle {
+    font-size:18px; font-weight:600; display:block;
   }
 
   /* Table design */
@@ -67,10 +74,9 @@
 </head>
 
 <body>
+  <!-- Controls (Hidden on print) -->
   <div class="controls">
     <h3 style="margin:0 0 8px 0">Agri-Fishery Commodity Retail Price</h3>
-    <div style="font-size:13px;color:#666;margin-bottom:6px;">
-    </div>
     <label style="font-size:13px;margin-right:6px;">Select Date:</label>
     <select id="dateSelect"></select>
     <button id="loadBtn">Load</button>
@@ -95,7 +101,10 @@
       </div>
     </div>
 
-    <div class="price-monitoring">REGION IX DAILY PRICE INDEX REPORT</div>
+    <div class="price-monitoring">
+      <span class="report-title">REGION IX AGRI-FISHERY AND CIGARETTES</span>
+      <span class="report-subtitle">DAILY PRICE INDEX REPORT</span>
+    </div>
 
     <div class="table-container">
       <table id="priceTable">
@@ -169,31 +178,36 @@ function identifyDates(){
     if(iso)dateColumns.push({index:i,iso,label:headerRow[i]});
   }
   if(dateColumns.length===0)return showNote('⚠️ No valid date columns found.',true);
+
   const sel=document.getElementById('dateSelect');
   sel.innerHTML=dateColumns.map(dc=>`<option value="${dc.index}">${new Date(dc.iso).toLocaleDateString(undefined,{month:'short',day:'numeric',year:'numeric'})}</option>`).join('');
   sel.value=dateColumns.at(-1).index;
+
   showNote(`✅ Loaded ${dateColumns.length} date columns.`);
-  document.getElementById('loadBtn').addEventListener('click',()=>renderByColumn(Number(sel.value)));
+  document.getElementById('loadBtn').addEventListener('click',()=>{
+    const selectedIndex = Number(sel.value);
+    renderByColumn(selectedIndex);
+  });
   document.getElementById('downloadPdf').addEventListener('click',downloadPDF);
 }
 
 function renderByColumn(i){
+  // FIX: Align date index properly
+  const colIndex = i; // ensure correct alignment
   const tb=document.querySelector('#priceTable tbody');
   tb.innerHTML='';
   let c=0;
   for(let r=10;r<rows.length;r++){
     const row=rows[r];
-    if(!row||row.length<i)continue;
-    const com=row[0]||'',spec=row[1]||'',unit=row[2]||'',price=row[i]||'';
+    if(!row||row.length<=colIndex)continue;
+    const com=row[0]||'',spec=row[1]||'',unit=row[2]||'',price=row[colIndex]||'';
     if(com.trim()){
       tb.insertAdjacentHTML('beforeend',`
-        <tr>
-          <td>${com}</td><td>${spec}</td><td>${unit}</td><td>${price}</td>
-        </tr>`);
+        <tr><td>${com}</td><td>${spec}</td><td>${unit}</td><td>${price}</td></tr>`);
       c++;
     }
   }
-  showNote(`✅ Showing ${c} records for: ${headerRow[i]}`);
+  showNote(`✅ Showing ${c} records for: ${headerRow[colIndex]}`);
 }
 
 function downloadPDF(){
@@ -216,7 +230,3 @@ function downloadPDF(){
 </script>
 </body>
 </html>
-
-
-
-
