--- a/dpireport.html
+++ b/dpireport.html
@@ -103,7 +103,6 @@
           Lenienza St., Pagadian City
         </div>
       </div>
-      <img src="https://raw.githubusercontent.com/amadnuevedpi/DA-AMAD-BP-logos/main/bag%20pil.png" height="70" alt="Bagong Pilipinas">
     </div>
 
     <div class="price-monitoring">REGION IX AGRI-FISHERY AND CIGARETTES</div>
@@ -120,7 +119,7 @@
     </div>
 
     <div class="footer-logo">
-      <img src="https://raw.githubusercontent.com/amadnuevedpi/DA-AMAD-BP-logos/main/ZAMPEN%20AMAD.png" alt="Zampen AMAD">
+      <img src="https://raw.githubusercontent.com/amadnuevedpi/DA-AMAD-BP-logos/main/ZAMPEN%20VINTA1.png" alt="Zampen AMAD">
     </div>
 
     <footer>
@@ -240,3 +239,4 @@ function downloadPDF(){
 </script>
 </body>
 </html>
+
